docs: enhance 10 advanced topics with practical examples and production-ready guides